#
# Copyright 2009 Free Software Foundation, Inc.
# 
# This file is part of GNU Radio
# 
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
# 
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
# 

include $(top_srcdir)/Makefile.common

grcblocksdir = $(grc_blocksdir)

dist_grcblocks_DATA = \
	chancoding_bsc_bb.xml \
	chancoding_markovchan_bb.xml \
	chancoding_ber_b.xml \
	chancoding_blockinterleaver_bb.xml \
	chancoding_blockdeinterleaver_bb.xml \
	chancoding_packed_to_unpacked_vib.xml \
	chancoding_unpacked_to_packed_bvi.xml \
	chancoding_rm_encoder_bb.xml \
	chancoding_rmg_encoder_bb.xml \
	chancoding_rm_decoder_bb.xml \
	chancoding_rmg_decoder_bb.xml \
	chancoding_rmg_decoder_sd_fb.xml \
	chancoding_industrystd_encoder_bb.xml

